--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ a:active {color:red;}
     |
     <a href="http://tehnopress.github.com/contact">Contact</a></div>
 
-    <p class="contact"> Otrocol Bogdan  | Croitoru Cosmin </p>
+    <p class="contact"><b> Otrocol Bogdan  | Croitoru Cosmin</b> </p>
 
 
 
