--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ div.one
 {
   width:270px;
   height:600px;
-  background-color:#66CC00;
+  background-color:#10D1F3;
    position:fixed;
   top:57px;
   right:10px;
