--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ p.pos
 
 div.one
 {
-  width:270px;
-  height:600px;
+  width:200px;
+  height:500px;
   background-color:#10D1F3;
    position:fixed;
-  top:57px;
+  top:100px;
   right:10px;
   text-align:center;
   color:#3399CC;
@@ -31,19 +31,17 @@ div.one
 
 div.tree
 {
-  width:688px;
-  height:97px;
+  width:696px;
+  height:98px;
   background-image:url('http://s20.postimage.org/9orlgtjel/cooltext948866288_1.png');
-  position:absolute;
-  left:center;
-  top:10px;
+  margin:auto;
 }
 
 h2
 {
   color:gray;
   text-align:center;
-  position:absolute; top:100px ;
+  position:absolute; top:20px ;
   font-size:30px;
 }
 
@@ -66,9 +64,7 @@ p
 
 div.four
 {
-  position:absolute;
-  top:120px;
-  left:30px;
+  margin:auto;
   width:860px;
   height:50px;
   background-color:#10D1F3;
@@ -79,30 +75,29 @@ div.four
   color:red;
   border-width:4px;
 }
-p.contact
-{
-text-align:left;
-color:gray;
-font-size:30px;
-
-}
 
 p.one
 {
   color:gray;
   font-size:23px;
-  position:absolute;  top:192px;
+  position:absolute;  top:112px;
 
 }
 a:link {color:red;}   
 a:visited {color:red;} 
 a:hover {color:blue;}   
 a:active {color:red;}
+
+div.six
+{
+  width:1000px;
+  height:2000px;
+  margin:outset;
+ background-image:url('http://s20.postimage.org/abc9hqv7h/linedpaper.png');
+ position:absolute; top:220px; left:50px;
+}
 </style>
 </head>
-
-
-
 
 <body>
 
@@ -118,16 +113,21 @@ a:active {color:red;}
     |
     <a href="http://tehnopress.github.com/cars">Cars</a>
     |
-    <a href="http://tehnopress.github.com/contact">Contact</a></div>
-
-    <p class="contact"><b> Otrocol Bogdan  | Croitoru Cosmin</b> </p>
+    <a href="http://tehnopress.github.com/contact">Contact</a>
 
 
+  
 
 
-
+ 
 
   <div class="one"><b> HOT NEWS </b></div>
+
+  <div class="one"><a hreaf="" position="absolute" top:20px; right:5px;> A aparut mult asteptatul Samsung Galaxy SIV</div>
+
+ 
+  <div class="six"><b>Otrocol Bogdan|Cosmin Croitorul</b></div>
+
 
   </body>
 
