--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ div.six
     <a href="http://tehnopress.github.com/contact">Contact</a>
 
  
-  <div class="six">Otrocol Bogdan | Cosmin Croitoru </div>
+  <div class="six"><h2><b><u> A aparut mult asteptatul Samsung Galaxy SIV</u></b></h2> <p class="one"><i>Specifications: Android 4.1 | 5 inch screen | 1080p resolution (full hd) | quad-core Procrssor | 13 MP rear camera | 2 MP front camera | 2gb RAM |</i></p> <img src="http://i.telegraph.co.uk/multimedia/archive/02507/samsungSUMMARY_2507925b.jpg"style="position:absolute; top:170px; left:25%;" width="500px" heigh="600px"> </div>
 <div class="one"></div>
 <div class="seven"></div>
 
