--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ div.six
 
  
   <div class="six">Made by:
-    Otrocol Bogdan | Croitorul Cosmin</div>
+    Otrocol Bogdan | Croitoru Cosmin</div>
 <div class="one"></div>
 <div class="seven"></div>
 
